# Battlemines_2

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .gitignore  generate_sln.bat
data/: blur.frag  textured.frag  xorg.conf
include/Battlemines_2/: board.h  board_console.h  console_interface.h  game_logic.h  stages.h
project/: CMakeLists.txt  project_config.cmake
project/cmake_utils/: configure_subprojects.cmake  enable_warnings.cmake  exclude_files.cmake  fill_platform_excludes.cmake  gather_files.cmake  gather_subdirs.cmake  include_optional_utils.cmake  include_required_utils.cmake  setup_benchmark.cmake  setup_clang_tidy.cmake  setup_gtest.cmake  setup_visual_studio_filters.cmake
src/: board.cpp  board_console.cpp  game_logic.cpp  main.cpp  stages.cpp
src/Battlemines_2/: board.cpp  board_console.cpp  console_interface.cpp  game_logic.cpp  stages.cpp
tests/: board.tests.cpp  game_logic.tests.cpp
